--- a/index.html
+++ b/index.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>CodePen - Portfólio - Aula 9</title>
-  <link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
 <body>
 <div class="container">
 <header class="cabecalho">
@@ -35,11 +25,12 @@
 <span>See the Pen <a href="https://codepen.io/gabriel-doellinger/pen/wvejdom"> Aluraflix - dia 5</a> by Gabriel Doellinger (<a href="https://codepen.io/gabriel-doellinger">@gabriel-doellinger</a>) on <a href="https://codepen.io">CodePen</a>.</span></p>
 <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
 </li>
+<li class="projeto-lista"><p>Mentalista</p>
+<p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="OJgOQyY" data-user="gabriel-doellinger" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+<span>See the Pen <a href="https://codepen.io/gabriel-doellinger/pen/OJgOQyY"> Mentalista - ID3</a> by Gabriel Doellinger (<a href="https://codepen.io/gabriel-doellinger">@gabriel-doellinger</a>) on <a href="https://codepen.io">CodePen</a>.</span>
+</p>
+<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+</li>
 </main>
 </div>
 </body>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
-</body>
-</html>
